--- a/style.css
+++ b/style.css
@@ -1708,7 +1708,7 @@
     bottom: 80px;
     right: 20px;
     width: 550px;
-    height: 700px;
+    height: 75vh;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
