--- a/style.css
+++ b/style.css
@@ -2959,6 +2959,7 @@ textarea.form-control {
   .theme-toggle {
     margin-left: var(--space-8);
   }
+
 }
 @media (max-width: 480px) {
   .contact-stats {
@@ -3007,8 +3008,8 @@ html {
   bottom: 55px;
   right: 20px;
   z-index: 1000;
-  width: 200px;
-  height: 90px;
+  width: 190px;
+  height: 80px;
   border-radius: 35px;
   background: transparent;
   border: 2px solid rgba(120, 70, 230, 0.6);
@@ -3071,7 +3072,7 @@ html {
   gap: 10px;
   transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
   animation: pulse 2s infinite;
-  height: 120px;
+  height: 80px;
   width: 200px;
   font-family: 'Poppins', sans-serif;
 }
@@ -3345,4 +3346,15 @@ html {
 #temp{
   height: 100%;
   width: 100%;
+}
+
+@media (max-width: 768px) {
+   .fab1{
+    height: 50px;
+width: 145px;
+  }
+  .floating-actions{
+    height: 45px;
+    width: 145px;
+  }
 }
