--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;Z
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
